--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,8 @@
 {
 	"files.associations": {
-		"ft_printf.h": "c"
+		"ft_printf.h": "c",
+		"limits.h": "c",
+		"stdarg.h": "c",
+		"stdlib.h": "c"
 	}
 }
